log-schemas/27.5/opcua_binary_event_filter_attribute_operand_browse_paths.rst
``opcua_binary_event_filter_attribute_operand_browse_paths`` field reference
----------------------------------------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``browse_path_element_link_id`` (string)
     - The browse_path_element_link_id information.

   * - ``type_id_encoding_mask`` (string)
     - The type_id_encoding_mask information.

   * - ``type_id_namespace_idx`` (integer - count)
     - The type_id_namespace_idx information.

   * - ``type_id_numeric`` (integer - count)
     - The type_id_numeric information.

   * - ``type_id_string`` (string)
     - The type_id_string information.

   * - ``type_id_guid`` (string)
     - The type_id_guid information.

   * - ``type_id_opaque`` (string)
     - The type_id_opaque information.

   * - ``is_inverse`` (boolean - bool)
     - The is_inverse information.

   * - ``include_subtypes`` (boolean - bool)
     - The include_subtypes information.

   * - ``target_name_namespace_idx`` (integer - count)
     - The target_name_namespace_idx information.

   * - ``target_name`` (string)
     - The target_name information.
